replace docs/* link:../ with link:/docs

--- a/docs/common/System_Requirements.asciidoc
+++ b/docs/common/System_Requirements.asciidoc
@@ -15,7 +15,7 @@ Stepper systems in general require faster threads to generate step pulses than s
 Keep in mind that the Latency Test numbers are more important than the processor speed for
 software step generation. 
 
-More information on the Latency Test is link:../install/Latency_Test[Here]
+More information on the Latency Test is link:/docs/install/Latency_Test[Here]
 
 Machinekit and Debian should run reasonably well on a computer with the
 following minimum hardware specification. These numbers are not the
