--- a/docs/setting-up/developing-setting-up.asciidoc
+++ b/docs/setting-up/developing-setting-up.asciidoc
@@ -10,6 +10,6 @@ This section will show examples of how to set up an environment for developing
 specific applications for Machinekit. This page will collect relevant links and
 instructions.
 
-. link:../CAN-developing-setup[Setup for CAN development]
-. link:../developing/machinekit-developing[General Development Setup and packages]
+. link:/docs/CAN-developing-setup[Setup for CAN development]
+. link:/docs/developing/machinekit-developing[General Development Setup and packages]
 . please add other sections / subjects / busses here.
