fix some more bad image links

--- a/docs/gcode/tool_compensation.asciidoc
+++ b/docs/gcode/tool_compensation.asciidoc
@@ -2,6 +2,9 @@
 ---
 
 :skip-front-matter:
+
+:imagesdir: /docs/gcode/images
+
 = Tool Compensation
 
 [[cha:tool-compensation]] (((Tool Compensation)))
