--- a/docs/hal/basic_hal.asciidoc
+++ b/docs/hal/basic_hal.asciidoc
@@ -4,7 +4,7 @@
 :skip-front-matter:
 
 :imagesdir: /docs/hal/images
-:imagesoutdir: /docs/hal/images
+:imagesoutdir: docs/hal/images
 
 = Basic HAL Tutorial
 
