--- a/docs/man/man3/hal_add_funct_to_thread.3hal.asciidoc
+++ b/docs/man/man3/hal_add_funct_to_thread.3hal.asciidoc
@@ -10,7 +10,7 @@
 
 == NAME
 
-hal_add_funct_to_thread -- cause a function to be executed at regular intervals
+XXXX  hal_add_funct_to_thread -- cause a function to be executed at regular intervals
 
 
 
