--- a/docs/man/man1/halrun.1.asciidoc
+++ b/docs/man/man1/halrun.1.asciidoc
@@ -3,9 +3,7 @@
 :skip-front-matter:
 
 = HALRUN(1)
-.de URL
-\\$2 \(laURL: \\$1 \(ra\\$3
-.if \n[.g] .mso www.tmac
+
 :manmanual: HAL Components
 :mansource: ../man/man1/halrun.1.asciidoc
 :man version : 
@@ -17,11 +15,11 @@ halrun -- manipulate the LinuxCNC HAL from the command line
 
 == SYNOPSIS
 halrun __-h__
-.PP
+
 halrun [__-I__] [__halcmd_opts__] [__filename[.hal|.tcl]__]
-.PP
+
 halrun __-T__ [__halcmd_opts__] [__filename[.hal|.tcl]__]
-.PP
+
 halrun __-U__
 
 
@@ -91,13 +89,8 @@ Controller project.  Now includes major contributions by several
 members of the project.
 
 
-== REPORTING BUGS
-Report bugs to the
-.URL http://sf.net/tracker/?group_id=6744&atid=106744 "LinuxCNC bug tracker" .
-
-
 == COPYRIGHT
-Copyright \(co 2003 John Kasunich.
+Copyright 2003 John Kasunich.
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
