--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -10,7 +10,7 @@
 - link:/docs/index-HAL[HAL manual]
 - link:/docs/index-integrator[Integrator manual]
 - link:/docs/index-developer[Developer manual]
-- link:/docs/documenting/documenting[Documenting manual]
+- link:/docs/index-documenting[Documenting links]
 
 Before asking questions on the google group Machinekit list,
 please make sure you have read:
