--- a/docs/documenting/diagram-examples.asciidoc
+++ b/docs/documenting/diagram-examples.asciidoc
@@ -168,13 +168,33 @@ seqdiag {
 
 == Highlighting sourcecode using link:http://pygments.org[pygments]
 
-// still broken
-:source-highlighter: pygments
-:pygments-style: monokai
+Default hightlighing style is {pygments-css} using {source-highlighter} as highlighting engine.
+These link:https://github.com/jwarby/jekyll-pygments-themes[css themes] are available.
 
-[source,python,linenums]
+A bit of Python:
+
+[source,python]
 ----
 def foo(bar):
     pass    # a comment
+----
+
+Ini files:
+[source,ini]
+----
+# Hardware Abstraction Layer section 
+[HAL]
+
+# The run script first uses halcmd to execute any HALFILE
+# files, and then to execute any individual HALCMD commands.
+#
+
+# list of hal config files to run through halcmd
+# files are executed in the order in which they appear
+HALFILE = core_sim.hal
+HALFILE = sim_spindle_encoder.hal
+HALFILE = axis_manualtoolchange.hal
+HALFILE = simulated_home.hal
+
 ----
 
